--- a/HelloTriangle/HelloTriangle.vcxproj.filters
+++ b/HelloTriangle/HelloTriangle.vcxproj.filters
@@ -19,4 +19,8 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="shader_base.vert" />
+    <None Include="shader_base.frag" />
+  </ItemGroup>
 </Project>
